Fixing overflow issue in pullquote section

--- a/assets/styles/sections/_pullquote-break.scss
+++ b/assets/styles/sections/_pullquote-break.scss
@@ -1,6 +1,7 @@
 // Pullquote Break
 
 .pullquote-break {
+  overflow: hidden;
   position: relative;
 
   @include media-md {
